Update Docker files to Ubuntu jammy
grpc yarp and api

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Api/Api.Server/Dockerfile
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Api/Api.Server/Dockerfile
@@ -34,7 +34,7 @@ RUN dotnet build "Api.Server.csproj" -c Release -o /app/build
 FROM build AS publish
 RUN dotnet publish "Api.Server.csproj" -c Release -o /app/publish
 
-FROM mcr.microsoft.com/dotnet/aspnet:$dotnet_version-alpine AS final
+FROM mcr.microsoft.com/dotnet/aspnet:$dotnet_version-jammy AS final
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
