--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Yarp/Dockerfile
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Yarp/Dockerfile
@@ -1,11 +1,9 @@
+ARG dotnet_version=6.0
 #See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
-FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
-WORKDIR /app
-EXPOSE 80
-EXPOSE 443
+# https://hub.docker.com/_/microsoft-dotnet
+FROM mcr.microsoft.com/dotnet/sdk:$dotnet_version-jammy AS build
 
-FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
 COPY ["NuGet.config", "."]
 COPY ["Directory.Build.props", "."]
@@ -19,14 +17,20 @@ COPY ["Source/Common/Common.Contracts/Common.Contracts.csproj", "Source/Common/C
 COPY ["Source/Libraries/TimeWarp.Modules/TimeWarp.Modules.csproj", "Source/Libraries/TimeWarp.Modules/"]
 COPY ["Source/TimeWarp.OptionsValidation/TimeWarp.OptionsValidation.csproj", "Source/TimeWarp.OptionsValidation/"]
 RUN dotnet restore "Source/ContainerApps/Yarp/Yarp.csproj"
-COPY . .
+
+COPY ["/Source/ContainerApps/Yarp/.", "Source/ContainerApps/Yarp"]
+COPY ["/Source/Common/.", "Source/Common"]
+COPY ["/Source/Libraries/.", "Source/Libraries"]
+
 WORKDIR "/src/Source/ContainerApps/Yarp"
 RUN dotnet build "Yarp.csproj" -c Release -o /app/build
 
 FROM build AS publish
 RUN dotnet publish "Yarp.csproj" -c Release -o /app/publish
 
-FROM base AS final
+FROM mcr.microsoft.com/dotnet/aspnet:$dotnet_version-jammy AS final
 WORKDIR /app
+EXPOSE 80
+EXPOSE 443
 COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "Yarp.dll"]
