--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/DevOps/Kubernetes/2_Workloads/Deployments/web-server/web_server-deployment.yaml
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/DevOps/Kubernetes/2_Workloads/Deployments/web-server/web_server-deployment.yaml
@@ -25,8 +25,16 @@ spec:
             - containerPort: 80
               name: http
           env:
+          - name: "ConnectionStrings__AppConfig"
+            value: $ConnectionStrings__AppConfig
           - name: "ASPNETCORE_ENVIRONMENT"
             value: $AspNetCore_Environment
           - name: "ASPNETCORE_FORWARDEDHEADERS_ENABLED"
             value: "true"
+          - name: "AZURE-CLIENT-ID"
+            value: $AzureClientId
+          - name: "AZURE-CLIENT-SECRET"
+            value: $AzureClientSecret
+          - name: "AZURE-TENANT-ID"
+            value: $AzureTenantId
           
