--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/DevOps/Kubernetes/2_Workloads/Deployments/yarp/yarp-deployment.yaml
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/DevOps/Kubernetes/2_Workloads/Deployments/yarp/yarp-deployment.yaml
@@ -28,4 +28,10 @@ spec:
           - name: "ASPNETCORE_ENVIRONMENT"
             value: $AspNetCore_Environment
           - name: "ASPNETCORE_FORWARDEDHEADERS_ENABLED"
-            value: "true"          
+            value: "true"
+          - name: "AZURE-CLIENT-ID"
+            value: $AzureClientId
+          - name: "AZURE-CLIENT-SECRET"
+            value: $AzureClientSecret
+          - name: "AZURE-TENANT-ID"
+            value: $AzureTenantId   
