--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/Common/Common.Server/Common.Server.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/Common/Common.Server/Common.Server.csproj
@@ -5,14 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Identity" />
     <PackageReference Include="MediatR" />
-    <PackageReference Include="MicroElements.Swashbuckle.FluentValidation" />    
+    <PackageReference Include="MicroElements.Swashbuckle.FluentValidation" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" />
+    <PackageReference Include="Microsoft.Azure.AppConfiguration.AspNetCore" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" />
-    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" />    
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" />
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
