--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/DevOps/Kubernetes/2_Workloads/Deployments/api-server/api_server-deployment.yaml
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/DevOps/Kubernetes/2_Workloads/Deployments/api-server/api_server-deployment.yaml
@@ -25,7 +25,22 @@ spec:
             - containerPort: 80
               name: http
           env:
+          - name: "ConnectionStrings__AppConfig"
+            value: $ConnectionStrings__AppConfig
           - name: "ASPNETCORE_ENVIRONMENT"
             value: $AspNetCore_Environment
           - name: "ASPNETCORE_FORWARDEDHEADERS_ENABLED"
-            value: "true"          
+            value: "true"
+          - name: "AZURE-CLIENT-ID"
+            value: $AzureClientId
+          - name: "AZURE-CLIENT-SECRET"
+            value: $AzureClientSecret
+          - name: "AZURE-TENANT-ID"
+            value: $AzureTenantId
+          volumeMounts:
+          - name: api-data
+            mountPath: /data/
+      volumes:
+      - name: api-data
+        persistentVolumeClaim:
+          claimName: api-data
