--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/DevOps/Kubernetes/2_Workloads/Deployments/grpc-server/grpc_server-deployment.yaml
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/DevOps/Kubernetes/2_Workloads/Deployments/grpc-server/grpc_server-deployment.yaml
@@ -24,8 +24,16 @@ spec:
           ports:
             - containerPort: 80
               name: http
+            - containerPort: 443
+              name: https
           env:
           - name: "ASPNETCORE_ENVIRONMENT"
             value: $AspNetCore_Environment
           - name: "ASPNETCORE_FORWARDEDHEADERS_ENABLED"
-            value: "true"          
+            value: "true"
+          - name: "AZURE-CLIENT-ID"
+            value: $AzureClientId
+          - name: "AZURE-CLIENT-SECRET"
+            value: $AzureClientSecret
+          - name: "AZURE-TENANT-ID"
+            value: $AzureTenantId     
