Add YARP route for web-server swagger
And add links to both web-server and api-server to the nav menu.

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Yarp/appsettings.Development.json
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Yarp/appsettings.Development.json
@@ -34,6 +34,12 @@
         "Match": {
           "Path": "{**catch-all}"
         }
+      },
+      "WebSwaggerRoute": {
+        "ClusterId": "Web",
+        "Match": {
+          "Path": "/api/web-server/{**catch-all}"
+        }
       }
     }
   }
