--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.TypeScript/package.json
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.TypeScript/package.json
@@ -8,17 +8,21 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "5.30.0",
-    "@typescript-eslint/parser": "5.30.0",
+    "@typescript-eslint/eslint-plugin": "5.30.6",
+    "@typescript-eslint/parser": "5.30.6",
+    "@tailwindcss/typography": "0.5.3",
+    "@tailwindcss/forms": "0.5.2",
+    "@tailwindcss/aspect-ratio": "0.4.0",
+    "@tailwindcss/line-clamp": "0.4.0",
     "autoprefixer": "10.4.7",
-    "eslint": "8.17.0",
+    "eslint": "8.19.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-prettier": "4.2.1",
     "postcss": "8.4.14",
     "prettier": "2.7.1",
-    "tailwindcss": "2.2.19",
+    "tailwindcss": "3.1.6",
     "typescript": "4.7.4"
   }
 }
