some updates to the console template
It needs much more

--- a/Source/TimeWarp.Console.Template/content/TimeWarp.Console-CSharp/.editorconfig
+++ b/Source/TimeWarp.Console.Template/content/TimeWarp.Console-CSharp/.editorconfig
@@ -7,19 +7,27 @@ root = true
 
 #### Core EditorConfig Options ####
 
+# So code cleanup will not run on save.
+[_Imports.cs]
+generated_code = true
+
+[*.csproj]
+generated_code = true
+
 [*]
 # Indentation and spacing
 indent_size = 2
 indent_style = space
-tab_width = 4
+tab_width = 2
 
 # New line preferences
-end_of_line = crlf
-insert_final_newline = false
+end_of_line = lf
+insert_final_newline = true
 
 # Development files
-[*.{cs,csx,cshtml,csproj,razor,sln,props,targets,json,md,yml,gitignore,}]
+[*.{cs,csx,cshtml,csproj,razor,sln,props,targets,json,yml,gitignore,}]
 charset = "utf-8"
+trim_trailing_whitespace = true
 
 #### .NET Coding Conventions ####
 [*.cs]
@@ -114,6 +122,9 @@ csharp_style_unused_value_expression_statement_preference = discard_variable:sil
 # 'using' directive preferences
 csharp_using_directive_placement = inside_namespace:suggestion
 
+# Namespace preferences
+csharp_style_namespace_declarations = file_scoped:error
+
 #### C# Formatting Rules ####
 
 # New line preferences
@@ -154,7 +165,7 @@ csharp_space_between_method_call_parameter_list_parentheses = false
 csharp_space_between_method_declaration_empty_parameter_list_parentheses = false
 csharp_space_between_method_declaration_name_and_open_parenthesis = false
 csharp_space_between_method_declaration_parameter_list_parentheses = false
-csharp_space_between_parentheses = false 
+csharp_space_between_parentheses = false
 csharp_space_between_square_brackets = false
 
 # Wrapping preferences
@@ -172,11 +183,11 @@ dotnet_naming_rule.interface_should_be_begins_with_i.style = interface_style
 
 dotnet_naming_symbols.interface.applicable_kinds = interface
 dotnet_naming_symbols.interface.applicable_accessibilities = public, internal, private, protected, protected_internal
-dotnet_naming_symbols.interface.required_modifiers = 
+dotnet_naming_symbols.interface.required_modifiers =
 
 dotnet_naming_style.interface_style.required_prefix = I
-dotnet_naming_style.interface_style.required_suffix = 
-dotnet_naming_style.interface_style.word_separator = 
+dotnet_naming_style.interface_style.required_suffix =
+dotnet_naming_style.interface_style.word_separator =
 dotnet_naming_style.interface_style.capitalization = pascal_case
 
 # Types should be PascalCase
@@ -186,7 +197,7 @@ dotnet_naming_rule.types_should_be_pascal_case.style = types_style
 
 dotnet_naming_symbols.types.applicable_kinds = class, struct, interface, enum
 dotnet_naming_symbols.types.applicable_accessibilities = public, internal, private, protected, protected_internal
-dotnet_naming_symbols.types.required_modifiers = 
+dotnet_naming_symbols.types.required_modifiers =
 
 dotnet_naming_style.types_style.capitalization = pascal_case
 
@@ -229,7 +240,7 @@ dotnet_naming_rule.camel_case_for_local_variables.style    = local_variables_sty
 
 dotnet_naming_symbols.local_variables.applicable_kinds = local
 
-dotnet_naming_style.local_variables_style.capitalization = camel_case 
+dotnet_naming_style.local_variables_style.capitalization = camel_case
 
 # Parameters should be prefixed with an 'a'
 dotnet_naming_rule.parameters_should_be_prefixed.severity         = suggestion
@@ -250,3 +261,13 @@ dotnet_naming_symbols.local_functions.applicable_kinds = local_function
 
 dotnet_naming_style.local_function_style.capitalization = pascal_case
 
+
+#### Analyizer settings ####
+dotnet_code_quality.null_check_validation_methods = NotNull
+
+# CA1062: Validate arguments of public methods
+# TODO: Turn this back on when figure out how to get Dawn.Guard to not trigger it.
+dotnet_diagnostic.CA1062.severity = silent
+
+# CA1308: Normalize strings to uppercase
+dotnet_diagnostic.CA1308.severity = none
