--- a/Source/TimeWarp.Console.Template/content/TimeWarp.Console-CSharp/CodeMaid.config
+++ b/Source/TimeWarp.Console.Template/content/TimeWarp.Console-CSharp/CodeMaid.config
@@ -57,6 +57,15 @@
             <setting name="Reorganizing_MemberTypeEvents" serializeAs="String">
                 <value>Events||6||Events</value>
             </setting>
+            <setting name="Cleaning_InsertEndOfFileTrailingNewLine" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Digging_SecondarySortTypeByName" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Reorganizing_ReverseOrderByAccessLevel" serializeAs="String">
+                <value>True</value>
+            </setting>
         </SteveCadwallader.CodeMaid.Properties.Settings>
     </userSettings>
 </configuration>
