--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Tests/TimeWarp.SourceCodeGenerators.Tests/SourceCodeGenerators.Tests.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Tests/TimeWarp.SourceCodeGenerators.Tests/SourceCodeGenerators.Tests.csproj
@@ -5,11 +5,14 @@
     <PackageReference Include="Fixie.TestAdapter" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" />
     <PackageReference Include="FluentAssertions" />
+    <PackageReference Include="TimeWarp.Fixie" />
+    <!--<PackageReference Include="TimeWarp.Fixie" />-->
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Source\SourceCodeGenerators\SourceCodeGenerators.csproj" />
     <ProjectReference Include="..\TimeWarp.Testing\Testing.Common.csproj" />
+    <ProjectReference Include="C:\git\github\TimeWarpEngineering\timewarp-fixie\source\TimeWarp.Fixie\TimeWarp.Fixie.csproj" />
   </ItemGroup>
 
   <!--<ItemGroup>
