--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Tests/TimeWarp.Testing/Testing.Common.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Tests/TimeWarp.Testing/Testing.Common.csproj
@@ -4,9 +4,11 @@
     <PackageReference Include="Fixie.TestAdapter" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" />
     <PackageReference Include="FluentAssertions" />
-    <PackageReference Include="Scrutor" />
+    <!--<PackageReference Include="Scrutor" />-->
+    <!--<PackageReference Include="TimeWarp.Fixie" />-->
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\..\..\..\timewarp-fixie\source\TimeWarp.Fixie\TimeWarp.Fixie.csproj" />
     <ProjectReference Include="..\..\Source\ContainerApps\Api\Api.Server\Api.Server.csproj" />
     <ProjectReference Include="..\..\Source\ContainerApps\Web\Web.Server\Web.Server.csproj" />
     <ProjectReference Include="..\..\Source\ContainerApps\Yarp\Yarp.csproj" />
