change namespace from TimeWarp.Architecture.Features.Bases to using TimeWarp.Architecture.Features
Makes sense to me that bases are at the base namespace.

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Web.Spa.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Web.Spa.csproj
@@ -30,6 +30,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Using Include="BlazorState" />
+    <Using Include="MediatR" />
+  </ItemGroup>
+
+  <ItemGroup>
     <InternalsVisibleTo Include="Web.Spa.Integration.Tests" />
     <InternalsVisibleTo Include="Web.Server.Integration.Tests" />
   </ItemGroup>
