--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Directory.Packages.props
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Directory.Packages.props
@@ -20,6 +20,7 @@
     <PackageVersion Include="Grpc.AspNetCore.Web" Version="2.46.0" />
     <PackageVersion Include="Grpc.Net.Client" Version="2.46.0" />
     <PackageVersion Include="Grpc.Net.Client.Web" Version="2.46.0" />
+    <PackageVersion Include="HeroIcons.Blazor" Version="1.0.6" />
     <PackageVersion Include="MediatR" Version="10.0.1" />
     <PackageVersion Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
     <PackageVersion Include="protobuf-net.Grpc" Version="1.0.152" />
@@ -69,6 +70,8 @@
     <PackageVersion Include="System.Net.Http.Json" Version="6.0.0" />
     <PackageVersion Include="System.ServiceModel.Primitives" Version="4.9.0" />
     <PackageVersion Include="TimeWarp.Fixie" Version="1.0.0-alpha.1" />
+    <PackageVersion Include="timewarp-heroicons" Version="2.0.12" />
+    <PackageVersion Include="timewarp-simple-icons" Version="7.5.3" />
     <PackageVersion Include="Yarp.ReverseProxy" Version="1.1.0"/>
   </ItemGroup>
 </Project>
