--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/NuGet.config
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/NuGet.config
@@ -4,6 +4,13 @@
     <clear />
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
   </packageSources>
+  <!-- Define mappings by adding package patterns beneath the target source. -->
+  <packageSourceMapping>
+    <!-- key value for <packageSource> should match key values from <packageSources> element -->
+    <packageSource key="nuget.org">
+      <package pattern="*" />
+    </packageSource>
+  </packageSourceMapping>
   <disabledPackageSources>
     <clear />
   </disabledPackageSources>
