--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Directory.Packages.props
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Directory.Packages.props
@@ -20,24 +20,21 @@
     <PackageVersion Include="Grpc.AspNetCore.Web" Version="2.49.0" />
     <PackageVersion Include="Grpc.Net.Client" Version="2.49.0" />
     <PackageVersion Include="Grpc.Net.Client.Web" Version="2.49.0" />
-    <PackageVersion Include="HeroIcons.Blazor" Version="1.0.6" />
     <PackageVersion Include="MediatR" Version="11.0.0" />
     <PackageVersion Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
-    <PackageVersion Include="protobuf-net.Grpc" Version="1.0.177" />
-    <PackageVersion Include="protobuf-net.Grpc.AspNetCore" Version="1.0.177" />
-    <PackageVersion Include="protobuf-net.Grpc.AspNetCore.Reflection" Version="1.0.177" />
-    <PackageVersion Include="protobuf-net.Grpc.Reflection" Version="1.0.177" />
     <PackageVersion Include="MicroElements.Swashbuckle.FluentValidation" Version="5.7.0" />
-    <PackageVersion Include="Microsoft.Azure.AppConfiguration.AspNetCore" Version="5.1.0" />
     <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.10" />
     <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.10" />
     <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="6.0.10" />
     <PackageVersion Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.10" />
     <PackageVersion Include="Microsoft.AspNetCore.SignalR.Client" Version="6.0.10" />
+    <PackageVersion Include="Microsoft.Azure.AppConfiguration.AspNetCore" Version="5.1.0" />
     <PackageVersion Include="Microsoft.CodeAnalysis" Version="4.3.1" />
     <PackageVersion Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.3" />
     <PackageVersion Include="Microsoft.CodeAnalysis.CSharp" Version="4.3.1" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Cosmos" Version="6.0.10" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.10" />
     <PackageVersion Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
     <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="6.0.1" />
     <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
@@ -45,8 +42,6 @@
     <PackageVersion Include="Microsoft.Extensions.Logging.Configuration" Version="6.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Options" Version="6.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="6.0.0" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.Cosmos" Version="6.0.10" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.10" />
     <PackageVersion Include="Microsoft.FeatureManagement.AspNetCore" Version="2.5.1" />
     <PackageVersion Include="Microsoft.Playwright" Version="1.27.2" />
     <PackageVersion Include="Microsoft.Tye.Extensions.Configuration" Version="0.10.0-alpha.21420.1" />
@@ -56,6 +51,10 @@
     <PackageVersion Include="Oakton" Version="4.6.3" />
     <PackageVersion Include="Octokit.Webhooks.AspNetCore" Version="1.0.0" />
     <PackageVersion Include="PeterLeslieMorris.Blazor.FluentValidation" Version="1.8.0" />
+    <PackageVersion Include="protobuf-net.Grpc" Version="1.0.177" />
+    <PackageVersion Include="protobuf-net.Grpc.AspNetCore" Version="1.0.177" />
+    <PackageVersion Include="protobuf-net.Grpc.AspNetCore.Reflection" Version="1.0.177" />
+    <PackageVersion Include="protobuf-net.Grpc.Reflection" Version="1.0.177" />
     <PackageVersion Include="Scrutor" Version="4.2.0" />
     <PackageVersion Include="Serilog.Extensions.Logging" Version="3.1.0" />
     <PackageVersion Include="Serilog.Formatting.Compact" Version="1.1.0" />
@@ -69,7 +68,8 @@
     <PackageVersion Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
     <PackageVersion Include="System.Net.Http.Json" Version="6.0.0" />
     <PackageVersion Include="System.ServiceModel.Primitives" Version="4.10.0" />
-    <PackageVersion Include="TimeWarp.Fixie" Version="1.0.0-alpha.1" />
+    <PackageVersion Include="TimeWarp.Fixie" Version="1.0.1" />
+    <PackageVersion Include="TimeWarp.SourceGenerators" Version="1.0.0-alpha.3" />
     <PackageVersion Include="timewarp-heroicons" Version="2.0.12" />
     <PackageVersion Include="timewarp-simple-icons" Version="7.17.0" />
     <PackageVersion Include="Yarp.ReverseProxy" Version="1.1.1"/>
