--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Tests/Api.Server.Integration.Tests/Api.Server.Integration.Tests.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Tests/Api.Server.Integration.Tests/Api.Server.Integration.Tests.csproj
@@ -5,15 +5,14 @@
     <PackageReference Include="FakeItEasy" />
     <PackageReference Include="Fixie.TestAdapter" />
     <PackageReference Include="FluentAssertions" />
-    <!--<PackageReference Include="TimeWarp.Fixie" />-->
+    <PackageReference Include="TimeWarp.Fixie" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Source\ContainerApps\Api\Api.Server\Api.Server.csproj" />
     <ProjectReference Include="..\..\Source\ContainerApps\Api\Api.Contracts\Api.Contracts.csproj" />
-    <ProjectReference Include="..\..\Source\SourceCodeGenerators\SourceCodeGenerators.csproj" />
     <ProjectReference Include="..\TimeWarp.Testing\Testing.Common.csproj" />
-    <ProjectReference Include="C:\git\github\TimeWarpEngineering\timewarp-fixie\source\TimeWarp.Fixie\TimeWarp.Fixie.csproj" />
+    <!--<ProjectReference Include="C:\git\github\TimeWarpEngineering\timewarp-fixie\source\TimeWarp.Fixie\TimeWarp.Fixie.csproj" />-->
   </ItemGroup>
 
   <ItemGroup>
