switch over to using TimeWarp.OptionsValidation Nuget instead of library being in this repo.

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/Common/Common.Infrastructure/Common.Infrastructure.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/Common/Common.Infrastructure/Common.Infrastructure.csproj
@@ -7,7 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Libraries\TimeWarp.OptionsValidation\TimeWarp.OptionsValidation.csproj" />
+    <PackageReference Include="Timewarp.OptionsValidation" />
+  </ItemGroup>
+  
+  <ItemGroup>
     <ProjectReference Include="..\Common.Application\Common.Application.csproj" />
   </ItemGroup>
 
