--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Directory.Packages.props
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Directory.Packages.props
@@ -71,6 +71,7 @@
     <PackageVersion Include="TimeWarp.Fixie" Version="1.0.1" />
     <PackageVersion Include="TimeWarp.SourceGenerators" Version="1.0.0-alpha.3" />
     <PackageVersion Include="timewarp-heroicons" Version="2.0.12" />
+    <PackageVersion Include="Timewarp.OptionsValidation" Version="1.0.0-alpha.2"/>
     <PackageVersion Include="timewarp-simple-icons" Version="7.17.0" />
     <PackageVersion Include="Yarp.ReverseProxy" Version="1.1.1"/>
   </ItemGroup>
