go with just the resulting js instead of building from TYpescript

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/.gitignore
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/.gitignore
@@ -299,7 +299,7 @@ __pycache__/
 GeneratedCode/
 
 # Web.Spa generated code
-/Source/ContainerApps/Web/Web.Spa/wwwroot/js/
+#/Source/ContainerApps/Web/Web.Spa/wwwroot/js/
 
 # Tye intermediate files
 .tye/
