a few more alignments problem still there some how

--- a/Source/Server/Pwa.Server.csproj
+++ b/Source/Server/Pwa.Server.csproj
@@ -1,7 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <Nullable>disable</Nullable>
-    <UseRazorSourceGenerator>true</UseRazorSourceGenerator>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -12,23 +11,13 @@
   <PropertyGroup>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <NoWarn>$(NoWarn);1591</NoWarn>
-    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-    <DockerfileContext>..\..\..\..</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Extensions\**" />
-    <Content Remove="Extensions\**" />
-    <EmbeddedResource Remove="Extensions\**" />
-    <None Remove="Extensions\**" />
-  </ItemGroup>
-
-  <ItemGroup Label="Core">
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" />
-    <PackageReference Include="Microsoft.CodeAnalysis" />    
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Client\Pwa.Spa.csproj" />
+    <ProjectReference Include="..\Client\Pwa.Client.csproj" />
   </ItemGroup>
 </Project>
