more not much left

--- a/Source/Server/appsettings.json
+++ b/Source/Server/appsettings.json
@@ -2,12 +2,8 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "SampleOptions": {
-    "SampleOption": "SampleValue"
-  }
+  "AllowedHosts": "*"
 }
