--- a/Source/Server/appsettings.Development.json
+++ b/Source/Server/appsettings.Development.json
@@ -1,10 +1,8 @@
 {
-  "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
   }
 }
