--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Tests/TimeWarp.Testing/Testing.Common.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Tests/TimeWarp.Testing/Testing.Common.csproj
@@ -1,4 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+  <PropertyGroup>
+    <DefineConstants>api;yarp;web</DefineConstants>
+  </PropertyGroup>
+  
   <ItemGroup>
     <PackageReference Include="FakeItEasy" />
     <PackageReference Include="Fixie" />
@@ -7,15 +11,20 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" />
     <PackageReference Include="MediatR" />
     <PackageReference Include="TimeWarp.Fixie" />
-    <!--<PackageReference Include="TimeWarp.SourceGenerators" OutputItemType="Analyzer" ReferenceOutputAssembly="false"/>-->
     <PackageReference Include="TimeWarp.SourceGenerators" >
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <!--#if(api)-->
     <ProjectReference Include="..\..\Source\ContainerApps\Api\Api.Server\Api.Server.csproj" />
+    <!--#endif-->
+    <!--#if(web)-->
     <ProjectReference Include="..\..\Source\ContainerApps\Web\Web.Server\Web.Server.csproj" />
+    <!--#endif-->
+    <!--#if(yarp)-->
     <ProjectReference Include="..\..\Source\ContainerApps\Yarp\Yarp.csproj" />
+    <!--#endif-->
   </ItemGroup>
 </Project>
