--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Web.Spa.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Web.Spa.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <Description>Blazor Spa</Description>
-    <DefineConstants>ReduxDevToolsEnabled;grpc;api;web</DefineConstants>
+    <DefineConstants>ReduxDevToolsEnabled;grpc;api;web;counter</DefineConstants>
     <!--<ServiceWorkerAssetsManifest>service-worker-assets.js</ServiceWorkerAssetsManifest>-->
   </PropertyGroup>
 
