--- a/Tests/TimeWarp.Architecture.Template.Tests/TimeWarp.Architecture.Template.Tests.csproj
+++ b/Tests/TimeWarp.Architecture.Template.Tests/TimeWarp.Architecture.Template.Tests.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Boxed.AspNetCore" Version="8.1.2" />
+    <PackageReference Include="Boxed.DotnetNewTest" Version="5.0.0" />
     <PackageReference Include="Fixie" Version="3.3.0" />
     <PackageReference Include="Fixie.TestAdapter" Version="3.2.0" />
     <PackageReference Include="FluentAssertions" Version="6.7.0" />
