--- a/Tests/TimeWarp.Architecture.Template.Tests/TimeWarp.Architecture.Template.Tests.csproj
+++ b/Tests/TimeWarp.Architecture.Template.Tests/TimeWarp.Architecture.Template.Tests.csproj
@@ -10,9 +10,13 @@
     <PackageReference Include="Boxed.AspNetCore" Version="8.1.2" />
     <PackageReference Include="Boxed.DotnetNewTest" Version="5.0.0" />
     <PackageReference Include="Fixie" Version="3.3.0" />
-    <PackageReference Include="Fixie.TestAdapter" Version="3.2.0" />
+    <PackageReference Include="Fixie.TestAdapter" Version="3.3.0" />
     <PackageReference Include="FluentAssertions" Version="6.7.0" />
-    <PackageReference Include="TimeWarp.Fixie" Version="1.0.1" />
+    <PackageReference Include="TimeWarp.Fixie" Version="1.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Source\TimeWarp.Architecture.Template\TimeWarp.Architecture.csproj" />
   </ItemGroup>
 
 </Project>
