--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Directory.Packages.props
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Directory.Packages.props
@@ -48,6 +48,7 @@
     <PackageVersion Include="Microsoft.TypeScript.MSBuild" Version="4.6.2" />
     <PackageVersion Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
     <PackageVersion Include="Morris.Moxy" Version="0.7.0-Alpha" />
+    <PackageVersion Include="Morris.Blazor.ControlFlow" Version="2.0.0" />
     <PackageVersion Include="Nerdbank.GitVersioning" Version="3.5.119" />
     <PackageVersion Include="Oakton" Version="4.7.0" />
     <PackageVersion Include="Octokit.Webhooks.AspNetCore" Version="1.0.0" />
@@ -74,6 +75,7 @@
     <PackageVersion Include="timewarp-heroicons" Version="2.0.12" />
     <PackageVersion Include="Timewarp.OptionsValidation" Version="1.0.0-alpha.2" />
     <PackageVersion Include="timewarp-simple-icons" Version="7.17.0" />
+    <PackageVersion Include="Toolbelt.Blazor.SplitContainer" Version="1.1.1" />
     <PackageVersion Include="Yarp.ReverseProxy" Version="1.1.1" />
   </ItemGroup>
 </Project>
