--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Web.Spa.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Web.Spa.csproj
@@ -25,7 +25,6 @@
     <PackageReference Include="timewarp-heroicons" />
     <PackageReference Include="Timewarp.OptionsValidation" />
     <PackageReference Include="timewarp-simple-icons" />
-    <PackageReference Include="TimeWarp.SourceGenerators" />
     <PackageReference Include="Toolbelt.Blazor.SplitContainer" />
   </ItemGroup>
   
@@ -67,7 +66,9 @@
 
   <ItemGroup>
     <TypeScriptInputs Include="..\Web.TypeScript\source\*.*" />
+    <None Remove="Mixins\Page.mixin" />
     <AdditionalFiles Include="Features\Base\TwBaseSpa.mixin" />
+    <AdditionalFiles Include="Mixins\Page.mixin" />
     <TypeScriptOutputs Include="wwwroot\js\BlazorDualMode.js" />
   </ItemGroup>
 
