Migrate to MediatR 12 Update all the other nugets but Oakton will do that next.

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Application/Web.Application.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Application/Web.Application.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\Web.Domain\Web.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\Todo\" />
+  </ItemGroup>
+
 </Project>
