--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Directory.Packages.props
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Directory.Packages.props
@@ -1,49 +1,49 @@
 <Project>
   <ItemGroup>
-    <PackageVersion Include="AutoFixture" Version="4.17.0" />
-    <PackageVersion Include="AutoFixture.AutoFakeItEasy" Version="4.17.0" />
-    <PackageVersion Include="AutoMapper" Version="12.0.0" />
+    <PackageVersion Include="AutoFixture" Version="4.18.0" />
+    <PackageVersion Include="AutoFixture.AutoFakeItEasy" Version="4.18.0" />
+    <PackageVersion Include="AutoMapper" Version="12.0.1" />
     <PackageVersion Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
     <PackageVersion Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.2.2" />
-    <PackageVersion Include="Azure.Identity" Version="1.8.0" />
+    <PackageVersion Include="Azure.Identity" Version="1.8.2" />
     <PackageVersion Include="BlazorComponentUtilities" Version="1.8.0" />
-    <PackageVersion Include="Blazor-State" Version="7.0.0" />
+    <PackageVersion Include="Blazor-State" Version="8.0.0" />
     <PackageVersion Include="Dawn.Guard" Version="1.12.0" />
     <PackageVersion Include="FakeItEasy" Version="7.3.1" />
     <PackageVersion Include="Fixie" Version="3.3.0" />
     <PackageVersion Include="Fixie.TestAdapter" Version="3.3.0" />
-    <PackageVersion Include="FluentAssertions" Version="6.8.0" />
-    <PackageVersion Include="FluentValidation" Version="11.3.0" />
+    <PackageVersion Include="FluentAssertions" Version="6.10.0" />
+    <PackageVersion Include="FluentValidation" Version="11.5.1" />
     <PackageVersion Include="FluentValidation.AspNetCore" Version="11.2.2" />
-    <PackageVersion Include="Grpc.AspNetCore" Version="2.50.0" />
-    <PackageVersion Include="Grpc.AspNetCore.Server.Reflection" Version="2.50.0" />
-    <PackageVersion Include="Grpc.AspNetCore.Web" Version="2.50.0" />
-    <PackageVersion Include="Grpc.Net.Client" Version="2.50.0" />
-    <PackageVersion Include="Grpc.Net.Client.Web" Version="2.50.0" />
-    <PackageVersion Include="MediatR" Version="11.1.0" />
-    <PackageVersion Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageVersion Include="Grpc.AspNetCore" Version="2.51.0" />
+    <PackageVersion Include="Grpc.AspNetCore.Server.Reflection" Version="2.51.0" />
+    <PackageVersion Include="Grpc.AspNetCore.Web" Version="2.51.0" />
+    <PackageVersion Include="Grpc.Net.Client" Version="2.51.0" />
+    <PackageVersion Include="Grpc.Net.Client.Web" Version="2.51.0" />
+    <PackageVersion Include="MediatR" Version="12.0.1" />
+    <PackageVersion Include="MediatR.Contracts" Version="2.0.1" />
     <PackageVersion Include="MicroElements.Swashbuckle.FluentValidation" Version="5.7.0" />
-    <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.0" />
-    <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.0" />
-    <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="7.0.0" />
+    <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.3" />
+    <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.3" />
+    <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="7.0.3" />
     <PackageVersion Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
-    <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.0" />
-    <PackageVersion Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.0" />
-    <PackageVersion Include="Microsoft.Azure.AppConfiguration.AspNetCore" Version="5.1.0" />
-    <PackageVersion Include="Microsoft.CodeAnalysis" Version="4.4.0" />
+    <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.3" />
+    <PackageVersion Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.3" />
+    <PackageVersion Include="Microsoft.Azure.AppConfiguration.AspNetCore" Version="5.2.0" />
+    <PackageVersion Include="Microsoft.CodeAnalysis" Version="4.5.0" />
     <PackageVersion Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.3" />
     <PackageVersion Include="Microsoft.CodeAnalysis.CSharp" Version="4.3.1" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Cosmos" Version="7.0.0" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.0" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.3" />
     <PackageVersion Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
     <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
     <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
-    <PackageVersion Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="7.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="7.0.3" />
     <PackageVersion Include="Microsoft.Extensions.Logging.Configuration" Version="7.0.0" />
-    <PackageVersion Include="Microsoft.Extensions.Options" Version="7.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.Options" Version="7.0.1" />
     <PackageVersion Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="7.0.0" />
     <PackageVersion Include="Microsoft.FeatureManagement.AspNetCore" Version="2.5.1" />
-    <PackageVersion Include="Microsoft.Playwright" Version="1.28.0" />
+    <PackageVersion Include="Microsoft.Playwright" Version="1.31.1" />
     <PackageVersion Include="Microsoft.Tye.Extensions.Configuration" Version="0.10.0-alpha.21420.1" />
     <PackageVersion Include="Microsoft.TypeScript.MSBuild" Version="4.6.2" />
     <PackageVersion Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
@@ -53,29 +53,29 @@
     <PackageVersion Include="Oakton" Version="4.7.0" />
     <PackageVersion Include="Octokit.Webhooks.AspNetCore" Version="1.0.0" />
     <PackageVersion Include="PeterLeslieMorris.Blazor.FluentValidation" Version="1.8.0" />
-    <PackageVersion Include="protobuf-net.Grpc" Version="1.0.179" />
-    <PackageVersion Include="protobuf-net.Grpc.AspNetCore" Version="1.0.179" />
-    <PackageVersion Include="protobuf-net.Grpc.AspNetCore.Reflection" Version="1.0.179" />
-    <PackageVersion Include="protobuf-net.Grpc.Reflection" Version="1.0.179" />
+    <PackageVersion Include="protobuf-net.Grpc" Version="1.1.1" />
+    <PackageVersion Include="protobuf-net.Grpc.AspNetCore" Version="1.1.1" />
+    <PackageVersion Include="protobuf-net.Grpc.AspNetCore.Reflection" Version="1.1.1" />
+    <PackageVersion Include="protobuf-net.Grpc.Reflection" Version="1.1.1" />
     <PackageVersion Include="Scrutor" Version="4.2.0" />
     <PackageVersion Include="Serilog.Extensions.Logging" Version="3.1.0" />
     <PackageVersion Include="Serilog.Formatting.Compact" Version="1.1.0" />
     <PackageVersion Include="Serilog.Sinks.Console" Version="4.1.0" />
     <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.3.1" />
-    <PackageVersion Include="Swashbuckle.AspNetCore.Annotations" Version="6.4.0" />
+    <PackageVersion Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
     <PackageVersion Include="Swashbuckle.AspNetCore.Filters" Version="7.0.2" />
-    <PackageVersion Include="Swashbuckle.AspNetCore.Swagger" Version="6.4.0" />
-    <PackageVersion Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.4.0" />
-    <PackageVersion Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.4.0" />
+    <PackageVersion Include="Swashbuckle.AspNetCore.Swagger" Version="6.5.0" />
+    <PackageVersion Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.5.0" />
+    <PackageVersion Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.5.0" />
     <PackageVersion Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
     <PackageVersion Include="System.Net.Http.Json" Version="7.0.0" />
     <PackageVersion Include="System.ServiceModel.Primitives" Version="4.10.0" />
-    <PackageVersion Include="TimeWarp.Fixie" Version="1.0.1" />
+    <PackageVersion Include="TimeWarp.Fixie" Version="1.0.2" />
     <PackageVersion Include="TimeWarp.SourceGenerators" Version="1.0.0-alpha.5" />
     <PackageVersion Include="timewarp-heroicons" Version="2.0.12" />
     <PackageVersion Include="Timewarp.OptionsValidation" Version="1.0.0-alpha.2" />
     <PackageVersion Include="timewarp-simple-icons" Version="7.17.0" />
-    <PackageVersion Include="Toolbelt.Blazor.SplitContainer" Version="1.1.1" />
+    <PackageVersion Include="Toolbelt.Blazor.SplitContainer" Version="1.1.2" />
     <PackageVersion Include="Yarp.ReverseProxy" Version="1.1.1" />
   </ItemGroup>
 </Project>
